Cache the DL model files in the Travis CI environment
Auto-downloading these takes extra minutes we can spare.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,10 @@ services:
 # docker images are not cached by travis due to vm recreation for each build
 - docker
 cache:
-- pip
+  pip: true
+  directories:
+  # cache large DL models
+  - $HOME/.cache/torch/checkpoints
 addons:
   apt:
     sources:
